# PosixfyPrimitives

./: PosixfyPrimitives.cpp  PosixfyPrimitives.sln  README.md
.github/workflows/: tests.yml
_msvcStuff/: PosixfyPrimitives.vcxproj  PosixfyPrimitives.vcxproj.filters  stdafx.h
_msvcStuff/cmake/: CMakeLists.txt
qa/UnitTest/: testEvent.cpp  testProcess.cpp  testSystemWideMutex.cpp
src/: CTools.h  Event.cpp  Log.h  Main.h  testEvent.cpp
src/Posix/: Event.h  Process.h  SharedMem.h  SystemWideMutex.h
src/Windows/: Event.h  Process.h  SharedMem.h  SystemWideMutex.h
tests/: testEvent.cpp  testProcess.cpp  testSharedMem.cpp  testSystemWideMutex.cpp
